fix drawer overflow and add more examples button

--- a/src/Pages/Docs/Button/styles.module.css
+++ b/src/Pages/Docs/Button/styles.module.css
@@ -1,4 +1,4 @@
-.containerButtons{
+.containerButtons {
 	border: 1px rgb(15 25 38) solid;
 	margin: 10px;
 	border-radius: 10px;
@@ -6,15 +6,62 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	gap: 10px
+	gap: 10px;
 }
 
-
-.test{
+.test {
 	background-color: pink;
 	color: yellow;
 }
 
-.blockH3{
+.blockH3 {
 	margin-top: 15px;
+}
+
+.custom {
+	background-color: #f535e6;
+	border: 1px solid green;
+	border-radius: 0px;
+}
+
+.custom > div {
+	color: white;
+}
+
+.custom > span {
+	background-color: yellow !important;
+}
+
+.custom:hover {
+	background-color: #f590e6;
+}
+
+.custom:focus {
+	outline: 2px solid green;
+}
+
+.custom2 {
+	background-color: rgb(155, 165, 10);
+	border: 1px solid red;
+	border-radius: 30px;
+}
+
+.custom2 > div {
+	color: white;
+}
+
+.custom2 > span {
+	display: none;
+}
+
+.custom2:hover {
+	background-color: rgb(155, 165, 120);
+}
+
+.custom2:focus {
+	outline: 2px solid red;
+}
+
+.custom2:active {
+	transform: scale(0.98);
 }
